C123VAN01 modify clk to 45.1MHZ for emc test

--- a/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-wisehmi.dtsi
@@ -181,8 +181,8 @@
             hsync-len = <162>;
             vsync-len = <7>;
          };
-        C123VAN01 { /*HannStar 1440*540 panel*/
-            clock-frequency = <55100000>;
+        C123VAN01 { /*AUO 1440*540 panel*/
+            clock-frequency = <45100000>;
             hactive = <1440>;
             vactive = <540>;
             hback-porch = <65>;
